--- a/app/index/template.hbs
+++ b/app/index/template.hbs
@@ -1,36 +1,71 @@
-<div class="grid grid--6of12">
-  <div class="grid-cell">
-    <table class="table table--striped table--hover">
-      <thead>
-        <tr>
-          <th>Customer</th>
-          <th>Project</th>
-          <th>Task</th>
-          <th>Duration</th>
-          <th>Comment</th>
-        </tr>
-      </thead>
-      <tbody>
-        {{#each model as |activity|}}
-          <tr
-            class="pointer {{if activity.active 'highlight'}}"
-            {{action 'continueActivity' activity}}
-            title="Continue this activity"
-          >
-            <td>{{activity.task.project.customer.name}}</td>
-            <td>{{activity.task.project.name}}</td>
-            <td>{{activity.task.name}}</td>
-            <td>
-              {{#if activity.active}}
-                {{since activity.activeBlock.from activity.duration}}
-              {{else}}
-                {{duration-format activity.duration}}
-              {{/if}}
-            </td>
-            <td>{{activity.comment}}</td>
+<div>
+  <div class="grid grid--6of12">
+    <div class="grid-cell">
+      <h2>Attendance</h2>
+    </div>
+    <div class="grid-cell">
+      {{date-navigation align='right' current=date on-change=(action (mut date))}}
+    </div>
+    <div class="grid-cell grid-cell--12of12">
+      {{attendance-slider loading=loading attendances=model.attendances date=date on-change=(route-action 'updateAttendances')}}
+    </div>
+    <div class="grid-cell">
+      <h2>Activities</h2>
+      <table class="table table--striped table--hover table--activities">
+        <thead>
+          <tr>
+            <th>Customer</th>
+            <th>Project</th>
+            <th>Task</th>
+            <th>Duration</th>
+            <th>Comment</th>
           </tr>
-        {{/each}}
-      </tbody>
-    </table>
+        </thead>
+        <tbody class={{if loading 'loading-mask'}}>
+          {{#each model.activities as |activity|}}
+            <tr
+              class="{{if activity.active 'highlight' 'pointer'}}"
+              {{action 'continueActivity' activity}}
+              title="{{if activity.active 'Currently tracking...' 'Continue this activity'}}"
+            >
+              <td>{{activity.task.project.customer.name}}</td>
+              <td>{{activity.task.project.name}}</td>
+              <td>{{activity.task.name}}</td>
+              <td>
+                {{#if activity.active}}
+                  {{since activity.activeBlock.from activity.duration}}
+                {{else}}
+                  {{duration-format activity.duration}}
+                {{/if}}
+              </td>
+              <td>{{activity.comment}}</td>
+            </tr>
+          {{^}}
+            <tr>
+              <td colspan="5" class="text-center">No activities yet</td>
+            </tr>
+          {{/each}}
+        </tbody>
+      </table>
+    </div>
+    <div class="grid-cell">
+      <h2>Reports</h2>
+      <table class="table table--striped table--hover table--activities">
+        <thead>
+          <tr>
+            <th>Customer</th>
+            <th>Project</th>
+            <th>Task</th>
+            <th>Duration</th>
+            <th>Comment</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <td colspan="5" class="text-center">No reports yet</td>
+          </tr>
+        </tbody>
+      </table>
+    </div>
   </div>
 </div>
