--- a/app/projects/edit/index/template.hbs
+++ b/app/projects/edit/index/template.hbs
@@ -1,38 +1,28 @@
 <form {{action 'save' on='submit'}}>
-  <div class="grid grid--12of12">
-    <div class="grid-cell form-group">
-      <label>Project Name</label>
-      {{input type='text' value=model.name class='form-control'}}
-    </div>
-    <div class="grid-cell form-group">
-      <label>Customer</label>
-      {{#power-select
-        options       = customers
-        selected      = model.customer
-        onchange      = (action (mut model.customer))
-        class         = 'form-control'
-        as |customer|}}
-        {{customer.name}}
-      {{/power-select}}
-    </div>
-    <div class="grid-cell grid-cell--6of12 form-group">
-      <label>From</label>
-      {{pikaday-input class='form-control' value=model.from options=(hash position='bottom right') onSelection=(mut model.from)}}
-    </div>
-    <div class="grid-cell grid-cell--6of12 form-group">
-      <label>To</label>
-      {{pikaday-input class='form-control' value=model.to options=(hash position='bottom right') onSelection=(mut model.to)}}
-    </div>
-    <div class="grid-cell form-group">
-      <label>Project Leaders</label>
-      {{#power-select-multiple options=users selected=model.leaders onchange=(action (mut model.leaders)) as |user|}}
-        {{user.longName}}
-      {{/power-select-multiple}}
-    </div>
-    <div class="grid-cell form-group">
-      <button type="submit" class="btn btn-primary">Save</button>
-      <button type="button" class="btn btn-danger" {{action 'delete'}}>Delete</button>
-      {{#link-to 'projects.index' tagName='button' class='btn btn-default'}}Cancel{{/link-to}}
-    </div>
+  <div class="form-group">
+    <label>Project Name</label>
+    {{input type='text' value=model.name class='form-control'}}
+  </div>
+  <div class="form-group">
+    <label>Customer</label>
+    {{#power-select
+      options       = customers
+      selected      = model.customer
+      onchange      = (action (mut model.customer))
+      class         = 'form-control'
+      as |customer|}}
+      {{customer.name}}
+    {{/power-select}}
+  </div>
+  <div class="form-group">
+    <label>Project Leaders</label>
+    {{#power-select-multiple options=users selected=model.leaders onchange=(action (mut model.leaders)) as |user|}}
+      {{user.longName}}
+    {{/power-select-multiple}}
+  </div>
+  <div class="form-group">
+    <button type="submit" class="btn btn-primary">Save</button>
+    <button type="button" class="btn btn-danger" {{action 'delete'}}>Delete</button>
+    {{#link-to 'projects.index' tagName='button' class='btn btn-default'}}Cancel{{/link-to}}
   </div>
 </form>
