--- a/app/styles/power-select.scss
+++ b/app/styles/power-select.scss
@@ -1,3 +1,5 @@
+@import 'ember-power-select';
+
 .ember-power-select-trigger {
   border: 1px solid rgb(204, 204, 204);
   border-radius: var(--input-border-radius);
