--- a/app/templates/sidenav-body.hbs
+++ b/app/templates/sidenav-body.hbs
@@ -15,7 +15,7 @@
 
 {{#sy-sidenav-list ' '}}
   {{#sy-sidenav-item}}
-    <a class="pointer" {{action 'invalidateSession'}}>
+    <a href="#" {{action 'invalidateSession'}}>
       <i class="fa fa-sign-out"></i>
       Logout
     </a>
