--- a/app/task-templates/index/template.hbs
+++ b/app/task-templates/index/template.hbs
@@ -6,13 +6,13 @@
   </div>
 </div>
 
-{{#paginated-table model=model page=page as |header body|}}
-  {{#paginated-table.header}}
+{{#paginated-table model=model page=page as |table|}}
+  {{#table.header}}
     <th>Name</th>
-  {{/paginated-table.header}}
-  {{#paginated-table.body loading=loading model=model as |row|}}
+  {{/table.header}}
+  {{#table.body loading=loading model=model as |row|}}
     {{#link-to 'task-templates.edit' row.id tagName='tr' class='pointer'}}
       <td>{{row.name}}</td>
     {{/link-to}}
-  {{/paginated-table.body}}
+  {{/table.body}}
 {{/paginated-table}}
