--- a/app/protected/template.hbs
+++ b/app/protected/template.hbs
@@ -6,7 +6,7 @@
 
     {{#sy-sidenav-list ' '}}
       {{#sy-sidenav-item}}
-        <a href="#" {{action 'invalidateSession'}}>
+        <a data-test-logout href="#" {{action 'invalidateSession'}}>
           <i class="fa fa-sign-out"></i>
           Logout
         </a>
