--- a/app/components/record-button/template.hbs
+++ b/app/components/record-button/template.hbs
@@ -1,5 +1,5 @@
 <div class="record-button-container record-button-container--extend">
-  <button type="button" class="record-button" {{action 'startOrPause'}}></button>
+  <button data-test-record-start type="button" class="record-button" {{action 'startOrPause'}}></button>
   <div class="record-button-timer">
     {{#if recording}}
       {{since activity.activeBlock.from activity.duration}}
@@ -10,6 +10,6 @@
 </div>
 {{#if (or recording paused)}}
   <div class="record-button-container">
-    <button type="button" class="record-button record-button--stop" {{action 'stop'}}></button>
+    <button data-test-record-stop type="button" class="record-button record-button--stop" {{action 'stop'}}></button>
   </div>
 {{/if}}
