--- a/app/components/tracking-bar/template.hbs
+++ b/app/components/tracking-bar/template.hbs
@@ -1,5 +1,5 @@
 <form class="form-inline" {{action 'start' on='submit'}}>
-  <div class="form-group">
+  <div class="form-group" data-test-tracking-customer>
     {{#power-select
       disabled    = activity.active
       options     = _customers
@@ -10,7 +10,7 @@
       {{customer.name}}
     {{/power-select}}
   </div>
-  <div class="form-group">
+  <div class="form-group" data-test-tracking-project>
     {{#power-select
       disabled    = (or (not projects.length) activity.active)
       options     = _projects
@@ -21,7 +21,7 @@
       {{project.name}}
     {{/power-select}}
   </div>
-  <div class="form-group">
+  <div class="form-group" data-test-tracking-task>
     {{#power-select
       disabled    = (or (not tasks.length) activity.active)
       options     = _tasks
@@ -32,7 +32,7 @@
       {{task.name}}
     {{/power-select}}
   </div>
-  <div class="form-group">
+  <div class="form-group" data-test-tracking-comment>
     {{input
       type        = 'text'
       class       = 'form-control'
