Added missing documentation

--- a/app/components/tracking-bar/template.hbs
+++ b/app/components/tracking-bar/template.hbs
@@ -47,9 +47,9 @@
       recording = recording
       ready     = ready
       paused    = paused
-      start     = (action 'start')
-      stop      = (action 'stop')
-      pause     = (action 'pause')
+      on-start  = (action 'start')
+      on-stop   = (action 'stop')
+      on-pause  = (action 'pause')
     }}
   </div>
 </form>
