Removed unnecessary action in component

--- a/app/components/attendance-slider/template.hbs
+++ b/app/components/attendance-slider/template.hbs
@@ -7,7 +7,7 @@
   animate   = true
   behaviour = "drag"
   tooltips  = tooltips
-  on-slide  = 'slide'
+  on-slide  = (action (mut values))
   on-change = 'save'
 }}
 
