Improved style of the sidenav

--- a/app/components/sy-sidenav/styles.scss
+++ b/app/components/sy-sidenav/styles.scss
@@ -6,10 +6,10 @@
     align-items: center;
     padding: 1.5rem 1rem 1rem;
 
-    img {
-      margin-left: 1rem;
+    .nav-side-header-title {
+      margin: 0;
+      padding: 0 0 0 1rem;
       display: flex;
-      height: 30px;
     }
   }
 }
