--- a/app/components/sy-sidenav/template.hbs
+++ b/app/components/sy-sidenav/template.hbs
@@ -5,7 +5,9 @@
     </button>
     {{#link-to headerLink}}
       {{timed-clock}}
-      <img src="/assets/logo_text.png" alt="Timed">
+      <div class="nav-side-header-title">
+        {{title}}
+      </div>
     {{/link-to}}
   </header>
   <section class="nav-side-body">
