Added functionality to generate reports from activities

--- a/app/index/activities/template.hbs
+++ b/app/index/activities/template.hbs
@@ -49,6 +49,10 @@
       {{/each}}
     </tbody>
   </table>
+  <div class="text-center">
+    <br>
+    <button class="btn btn-primary" {{action 'generateReports'}}>Generate reports</button>
+  </div>
 {{else}}
   <div class="text-center"><em>No activities yet</em></div>
 {{/if}}
