--- a/app/components/tracking-bar/template.hbs
+++ b/app/components/tracking-bar/template.hbs
@@ -1,36 +1,13 @@
 <form class="form-inline" {{action 'start' on='submit'}}>
-  <div class="form-group" data-test-tracking-customer>
-    {{#power-select
-      disabled    = activity.active
-      options     = _customers
-      selected    = customer
-      onchange    = (action (mut customer))
-      placeholder = 'Customer'
-      as |customer|}}
-      {{customer.name}}
-    {{/power-select}}
-  </div>
-  <div class="form-group" data-test-tracking-project>
-    {{#power-select
-      disabled    = (or (not _projects.length) activity.active)
-      options     = _projects
-      selected    = project
-      onchange    = (action (mut project))
-      placeholder = 'Project'
-      as |project|}}
-      {{project.name}}
-    {{/power-select}}
-  </div>
-  <div class="form-group" data-test-tracking-task>
-    {{#power-select
-      disabled    = (or (not _tasks.length) activity.active)
-      options     = _tasks
-      selected    = task
-      onchange    = (action (mut task))
-      placeholder = 'Task'
-      as |task|}}
-      {{task.name}}
-    {{/power-select}}
+  <div class="form-group">
+    {{task-selection
+      task      = activity.task
+      customers = customers
+      projects  = projects
+      tasks     = tasks
+      disabled  = activity.active
+      on-change = (action (mut activity.task))
+    }}
   </div>
   <div class="form-group" data-test-tracking-comment>
     {{input
