--- a/app/index/reports/template.hbs
+++ b/app/index/reports/template.hbs
@@ -31,7 +31,7 @@
             {{#unless report.absenceType}}
               {{fa-icon (concat (if report.notBillable 'check-') 'square-o') fixedWidth=true}} Not billable
               <br>
-              {{fa-icon (concat (if report.review 'check-') 'square-o') fixedWidth=true}} Review
+              {{fa-icon (concat (if report.review 'check-') 'square-o') fixedWidth=true}} Needs review
             {{/unless}}
           </td>
         </tr>
