--- a/app/components/edit-report-modal/template.hbs
+++ b/app/components/edit-report-modal/template.hbs
@@ -25,7 +25,7 @@
         </div>
         <div class="grid-cell checkbox">
           {{input elementId='review' type='checkbox' checked=changeset.review}}
-          <label for="review">Review</label>
+          <label for="review">Needs review</label>
         </div>
       </div>
       <div class="form-group">
