Added some test selectors

--- a/app/index/reports/template.hbs
+++ b/app/index/reports/template.hbs
@@ -12,7 +12,7 @@
          data-test-report-row-id={{report.id}}
          onclick={{action 'editReport' report}}
          title="Click to edit report"
-         class="pointer {{if report.absenceType 'has-absence-type'}}"
+         class="pointer {{if report.absenceType 'is-absence'}}"
         >
           <td>
             {{#if report.absenceType}}
