--- a/app/components/edit-absence-modal/template.hbs
+++ b/app/components/edit-absence-modal/template.hbs
@@ -4,7 +4,7 @@
       {{if changeset.isNew 'New' 'Edit'}} absence
     {{/modal.header}}
     {{#modal.body}}
-      <div class="form-group">
+      <div data-test-absence-type class="form-group">
         {{#power-select
           renderInPlace = true
           allowClear    = true
@@ -20,15 +20,27 @@
           <p class="error-text">{{changeset.error.absenceType.validation.firstObject}}</p>
         {{/if}}
       </div>
-      <div class="form-group">
-        {{sy-durationpicker value=changeset.duration on-change=(action (mut changeset.duration))}}
+      <div data-test-absence-duration class="form-group">
+        {{sy-durationpicker
+          value     = changeset.duration
+          on-change = (action (mut changeset.duration))
+        }}
       </div>
-      <div class="form-group">
-        {{textarea placeholder='Enter comment...' rows=4 class='form-control' value=changeset.comment}}
+      <div data-test-absence-comment class="form-group">
+        {{textarea
+          placeholder = 'Enter comment...'
+          rows        = 4
+          class       = 'form-control'
+          value       = changeset.comment
+        }}
       </div>
     {{/modal.body}}
     {{#modal.footer}}
-      <button class="btn btn-primary" disabled="{{unless changeset.isValid 'disbled'}}" {{action 'save' changeset}}>
+      <button
+        class="btn btn-primary"
+        disabled="{{unless changeset.isValid 'disabled'}}"
+        {{action 'save' changeset}}
+      >
         Save
       </button>
       {{#unless changeset.isNew}}
