--- a/app/components/edit-report-modal/template.hbs
+++ b/app/components/edit-report-modal/template.hbs
@@ -16,24 +16,44 @@
         {{/if}}
       {{/task-selection}}
       <div class="grid grid--4of12">
-        <div class="grid-cell">
-          {{sy-durationpicker value=changeset.duration on-change=(action (mut changeset.duration))}}
+        <div data-test-report-duration class="grid-cell">
+          {{sy-durationpicker
+            value     = changeset.duration
+            on-change = (action (mut changeset.duration))
+          }}
         </div>
-        <div class="grid-cell checkbox">
-          {{input elementId='notBillable' type='checkbox' checked=changeset.notBillable}}
+        <div data-test-report-not-billable class="grid-cell checkbox">
+          {{input
+            elementId = 'notBillable'
+            type      = 'checkbox'
+            checked   = changeset.notBillable
+          }}
           <label for="notBillable">Not billable</label>
         </div>
-        <div class="grid-cell checkbox">
-          {{input elementId='review' type='checkbox' checked=changeset.review}}
+        <div data-test-report-review class="grid-cell checkbox">
+          {{input
+            elementId = 'review'
+            type      = 'checkbox'
+            checked   = changeset.review
+          }}
           <label for="review">Needs review</label>
         </div>
       </div>
-      <div class="form-group">
-        {{textarea placeholder='Enter comment...' rows=4 class='form-control' value=changeset.comment}}
+      <div data-test-report-comment class="form-group">
+        {{textarea
+          placeholder = 'Enter comment...'
+          rows        = 4
+          class       = 'form-control'
+          value       = changeset.comment
+        }}
       </div>
     {{/modal.body}}
     {{#modal.footer}}
-      <button class="btn btn-primary" disabled="{{unless changeset.isValid 'disbled'}}" {{action 'save' changeset}}>
+      <button
+        class="btn btn-primary"
+        disabled="{{unless changeset.isValid 'disabled'}}"
+        {{action 'save' changeset}}
+      >
         Save
       </button>
       {{#unless changeset.isNew}}
