--- a/app/components/task-selection/template.hbs
+++ b/app/components/task-selection/template.hbs
@@ -1,4 +1,7 @@
 <div class="form-group" data-test-tracking-customer>
+  {{#if showLabels}}
+    <label>Customer</label>
+  {{/if}}
   {{#power-select
     renderInPlace = true
     allowClear    = true
@@ -13,6 +16,9 @@
   {{/power-select}}
 </div>
 <div class="form-group" data-test-tracking-project>
+  {{#if showLabels}}
+    <label>Project</label>
+  {{/if}}
   {{#power-select
     renderInPlace = true
     allowClear    = true
@@ -26,7 +32,10 @@
     {{project.name}}
   {{/power-select}}
 </div>
-<div class="form-group" data-test-tracking-task>
+<div class="form-group {{if error 'has-error'}}" data-test-tracking-task>
+  {{#if showLabels}}
+    <label>Task <span class="required">*</span></label>
+  {{/if}}
   {{#power-select
     renderInPlace = true
     allowClear    = true
@@ -39,5 +48,11 @@
     as |task|}}
     {{task.name}}
   {{/power-select}}
-  {{yield}}
+  {{#if error}}
+    <p class="error-text">
+      {{#each error.validation as |message index|}}
+        {{if (gt index 0) ', '}}{{message}}
+      {{/each}}
+    </p>
+  {{/if}}
 </div>
