--- a/app/styles/sy-timepicker.scss
+++ b/app/styles/sy-timepicker.scss
@@ -1,3 +1,12 @@
+.has-error {
+  .sy-datepicker-picker,
+  .sy-durationpicker-picker,
+  .sy-timepicker-picker {
+    border: 1px solid color(var(--color-danger) tint(20%));
+    box-shadow: 0 0 8px color(var(--color-danger) a(60%));
+  }
+}
+
 .sy-datepicker-picker,
 .sy-durationpicker-picker,
 .sy-timepicker-picker {
