--- a/app/index/reports/template.hbs
+++ b/app/index/reports/template.hbs
@@ -1,6 +1,6 @@
 <div class="btn-toolbar btn-toolbar--right form-group">
-  <button title="Add report" class="btn btn-success" {{action 'addReport'}}>Add report</button>
-  <button title="Add absence" class="btn btn-success" {{action 'addAbsence'}}>Add absence</button>
+  <button title="Add a new report" class="btn btn-success" {{action 'addReport'}}>Add report</button>
+  <button title="Add a new absence" class="btn btn-success" {{action 'addAbsence'}}>Add absence</button>
 </div>
 
 {{#if reports}}
