--- a/app/components/edit-absence-modal/template.hbs
+++ b/app/components/edit-absence-modal/template.hbs
@@ -52,13 +52,14 @@
     {{#modal.footer}}
       <button
         class="btn btn-primary"
+        title="Delete this absence"
         disabled="{{unless changeset.isValid 'disabled'}}"
         {{action 'save' changeset}}
       >
         Save
       </button>
       {{#unless changeset.isNew}}
-        <button class="btn btn-danger" {{action 'delete'}}>Delete</button>
+        <button title="Delete this absence" class="btn btn-danger" {{action 'delete'}}>Delete</button>
       {{/unless}}
     {{/modal.footer}}
   {{/sy-modal}}
