--- a/app/index/activities/template.hbs
+++ b/app/index/activities/template.hbs
@@ -51,7 +51,13 @@
   </table>
   <div class="text-center">
     <br>
-    <button class="btn btn-primary" {{action 'generateReports'}}>Generate reports</button>
+    <button
+      class="btn btn-primary"
+      title="Generate reports for all the listed activities above"
+      {{action 'generateReports'}}
+    >
+       Generate reports
+    </button>
   </div>
 {{else}}
   <div class="text-center"><em>No activities yet</em></div>
